--- a/colorChooser@lestcape/stylesheet.css
+++ b/colorChooser@lestcape/stylesheet.css
@@ -27,6 +27,14 @@
     height: 16px;
 }
 
+.color-icon-box {
+    padding: 0px 0px;
+}
+
+.color-palette {
+    padding: 10px 10px;
+}
+
 .button-label {
     min-width: 8px;
     height: 4px;
@@ -40,4 +48,6 @@
 .button-icon-box {
     padding: 10px 10px;
 }
+
+
 
