--- a/colorChooser@lestcape/stylesheet.css
+++ b/colorChooser@lestcape/stylesheet.css
@@ -5,10 +5,7 @@
 .color-entry {
     width: -1px;
     font-family: monospace;
-}
-
-.color-entry {
-    spacing: .5em;
+    min-width: 100px
 }
 
 .color-spectrum {
@@ -27,27 +24,21 @@
     height: 16px;
 }
 
-.color-icon-box {
-    padding: 0px 0px;
-}
-
 .color-palette {
     padding: 10px 10px;
 }
 
-.button-label {
-    min-width: 8px;
-    height: 4px;
-}
-
-.button-icon {
-    padding: 0px 0px;
+.color-button-box {
+    border: 1px solid rgba(0,0,0,0.1);
     border-radius: 6px;
 }
 
-.button-icon-box {
-    padding: 10px 10px;
+.color-button {
+    padding: 2px 2px;
+    border-radius: 6px;
 }
 
-
-
+.icon-button {
+    padding: 2px 2px;
+    border-radius: 6px;
+}
